fix user list table spacing

--- a/src/components/UserList/user-list.scss
+++ b/src/components/UserList/user-list.scss
@@ -3,7 +3,7 @@
 }
 
 .user-list__avatar {
-  max-height: 8rem;
+  max-height: 5rem;
 }
 
 .user-list__table {
@@ -12,7 +12,7 @@
   border-collapse: collapse;
 
   td, th {
-    padding: 1rem 2rem;
+    padding: .5rem 2rem;
     border: .1rem solid $color-light-gray;
   }
 }
